<resources>
    <string name="app_name">WeTheManyApp</string>

    <!--    Login-->
    <string name="label_loginbutton">Login</string>
    <string name="label_signupbutton">Signup</string>

    <string name="hint_regitername">FullName</string>
    <string name="hint_regiterlastname">LastName</string>
    <string name="hint_regiterAddress">Current Address</string>


    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="hint_confirmpassword">Password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>



<!--    Commons One-->
    <string name="appTitle">We The Many App </string>

    Message After Purchasisng
    <string name="messageafterPurchsing"> Sucesfully Purchased, Thank You For Purhchasing the given Item. </string>

    <string name="appmotto">
    We are Responsible Company that sell environment and Healthy Product for Customer and
    Our climate mission is to intentionally impact climate change by investing at least 50% of
        profits into carbon reduction projects.
    </string>

    <string name="HomeTileText">Home </string>
    <string name="ProductTileText">Product </string>
    <string name="CartTileText">Cart </string>
    <string name="AccountTileText">Account </string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="details_rergarding_user">Details Rergarding User</string>
</resources>