<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    >

    <ImageView
        android:id="@+id/imageView_backBtn"
        android:layout_width="504dp"
        android:layout_height="275dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/image"
        android:contentDescription="TODO" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginLeft="1dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="1dp"
        android:layout_marginRight="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView_backBtn"
        app:tabSelectedTextColor="@color/purple_700"
        app:tabTextAppearance="@style/TextAppearance.AppCompat.Medium"
        app:tabTextColor="@color/teal_700">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/label_loginbutton">

        </com.google.android.material.tabs.TabItem>

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:foreground="@color/black"
            android:text="@string/label_signupbutton" />


    </com.google.android.material.tabs.TabLayout>

    <LinearLayout
        android:id="@+id/loginLayout"
        android:layout_width="409dp"
        android:layout_height="395dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="1dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tabLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40px"
            android:letterSpacing="0.03"
            android:text="@string/label_loginbutton"
            android:textColor="#0d6e6a"
            android:textSize="30sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/ediText_login_email"
            android:layout_width="350dp"
            android:layout_height="48dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/forget"
            android:hint="@string/login_email_hint"
            android:inputType="textEmailAddress"
            android:paddingLeft="20dp"

            android:textColor="#0d6e6a"
            android:textColorHint="@color/teal_700"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/ediText_login_password"
            android:layout_width="350dp"
            android:layout_height="48dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/forget"
            android:hint="@string/login_password_hint"
            android:inputType="text|textPassword"
            android:paddingLeft="20dp"
            android:textColor="#0d6e6a"
            android:textColorHint="@color/teal_700"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button_login"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/button"
            android:text="Login"
            android:textColor="#FFF"
            android:textSize="16dp"
            android:textStyle="bold"
            app:backgroundTint="@color/teal_700" />


    </LinearLayout>

<!--    Register -->
    <LinearLayout
        android:id="@+id/registerLayout"
        android:layout_width="403dp"
        android:layout_height="808dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="1dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tabLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40px"
            android:letterSpacing="0.03"
            android:text="@string/label_signupbutton"
            android:textColor="#0d6e6a"
            android:textSize="30dp"
            android:textStyle="bold" />

        <!--    Register -->


        <EditText
            android:id="@+id/ediText_register_firstName"
            android:layout_width="350dp"
            android:layout_height="48dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/forget"
            android:hint="@string/hint_regitername"
            android:inputType="text"
            android:paddingLeft="20dp"
            android:textColor="#0d6e6a"
            android:textColorHint="@color/teal_700"
            android:textSize="16dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/ediText_register_email"
            android:layout_width="350dp"
            android:layout_height="48dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/forget"
            android:hint="@string/login_email_hint"
            android:inputType="textEmailAddress"
            android:paddingLeft="20dp"
            android:textColor="#0d6e6a"
            android:textColorHint="@color/teal_700"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/ediText_register_password"
            android:layout_width="350dp"
            android:layout_height="48dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/forget"
            android:hint="@string/login_password_hint"
            android:inputType="textPassword"
            android:paddingLeft="20dp"
            android:textColor="#0d6e6a"
            android:textColorHint="@color/teal_700"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/ediText_register_confirmpassword"
            android:layout_width="350dp"
            android:layout_height="48dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/forget"
            android:hint="@string/hint_confirmpassword"
            android:inputType="textPassword"
            android:paddingLeft="20dp"
            android:textColor="#0d6e6a"
            android:textColorHint="@color/teal_700"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/ediText_register_address"
            android:layout_width="350dp"
            android:layout_height="48dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/forget"
            android:hint="@string/hint_regiterAddress"
            android:inputType="textAutoComplete"
            android:paddingLeft="20dp"
            android:textColor="#0d6e6a"
            android:textColorHint="@color/teal_700"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button_register_signup"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/button"
            android:text="@string/label_signupbutton"
            android:textColor="#FFF"
            android:textSize="16sp"
            android:textStyle="bold"
            app:backgroundTint="@color/teal_700" />


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>